# taskgist

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
scripts/: bootstrap.sh  bump_version.py
src/taskgist/: main.py
src/taskgist/baml_client/: async_client.py  async_request.py  inlinedbaml.py  parser.py  partial_types.py  sync_client.py  sync_request.py  type_builder.py  types.py
src/taskgist/baml_src/: clients.baml  generators.baml  keywords.baml
tests/: test_create_gist.py  test_version.py
