[project]
name = "taskgist"
version = "0.1.2"
description = "Generates a concise gist from a task description using BAML and OpenAI."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" } # Simplified license for this example
authors = [
    { name = "Your Name", email = "you@example.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]
dependencies = [
    "baml-py==0.89",
    "pydantic>=2.11.5",
    "python-dotenv~=1.0.0",
]

[project.scripts]
taskgist = "taskgist.main:main_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/taskgist/__init__.py"

[dependency-groups]
dev = [
    "ruff>=0.11.11",
]
